[tool.poetry]
name = "pinnacle"
version = "0.2.0"
description = ""
authors = ["nt54hamnghi <hamnghi250699@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
attrs = "^22.2.0"
httpx = "^0.23.3"
psutil = "^5.9.4"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"
asyncer = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"
types-psutil = "^5.9.5.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
plugins = "pydantic.mypy"
# output
pretty = true
# include
files = ["pinnacle/**/*.py"]
# optional
no_implicit_optional = true
# function defs
check_untyped_defs = true
allow_untyped_defs = true
allow_incomplete_defs = true
allow_any_explicit = true
# warning
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
# strictness
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--ignore=./legacy"]